[gd_scene load_steps=6 format=3 uid="uid://d3soqqlkvvbbp"]

[ext_resource type="Script" path="res://scripts/gui/multiplayer_menu.gd" id="1_7u6sm"]
[ext_resource type="PackedScene" uid="uid://w6qkohd2ejme" path="res://scenes/golfball.tscn" id="2_52pmy"]
[ext_resource type="Theme" uid="uid://cui388khn2ihv" path="res://themes/menu_theme.tres" id="4_0icmm"]
[ext_resource type="Texture2D" uid="uid://dgnyfhw1yvvt1" path="res://assets/images/godot_golf_logo.png" id="4_o1rfd"]
[ext_resource type="PackedScene" uid="uid://cfmoahalri06d" path="res://addons/player-networking/NetworkGateway.tscn" id="5_pirhu"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 271.0
offset_top = 98.0
offset_right = -271.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_0icmm")
script = ExtResource("1_7u6sm")
player_scene = ExtResource("2_52pmy")

[node name="NameSelectionContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -17.0
offset_right = 149.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="NameSelectionContainer"]
layout_mode = 2
placeholder_text = "Enter your name here"
expand_to_text_length = true

[node name="NameConfirmButton" type="Button" parent="NameSelectionContainer"]
layout_mode = 2
text = "Confirm"

[node name="SingleplayerMultiplayerContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -74.5
offset_right = 102.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SingleplayerMultiplayerContainer"]
layout_mode = 2
texture = ExtResource("4_o1rfd")
expand_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SingleplayerMultiplayerContainer"]
layout_mode = 2
alignment = 1

[node name="SingleplayerButton" type="Button" parent="SingleplayerMultiplayerContainer/HBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="SingleplayerMultiplayerContainer/HBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="HBoxWebRTC" type="HBoxContainer" parent="SingleplayerMultiplayerContainer"]
layout_mode = 2

[node name="WebRTC" type="Button" parent="SingleplayerMultiplayerContainer/HBoxWebRTC"]
layout_mode = 2
text = "WebRTC network"

[node name="Label" type="Label" parent="SingleplayerMultiplayerContainer/HBoxWebRTC"]
layout_mode = 2
text = "Roomname:"

[node name="LineEdit" type="LineEdit" parent="SingleplayerMultiplayerContainer/HBoxWebRTC"]
layout_mode = 2
text = "Tokyo"

[node name="MultiplayerContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -96.0
offset_right = 114.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_0icmm")
theme_override_constants/separation = 20
alignment = 1

[node name="Host" type="Button" parent="MultiplayerContainer"]
layout_mode = 2
text = "Host"

[node name="HSeparator" type="HSeparator" parent="MultiplayerContainer"]
layout_mode = 2

[node name="IPLineEdit" type="LineEdit" parent="MultiplayerContainer"]
layout_mode = 2
placeholder_text = "Insert host-IP"

[node name="Join" type="Button" parent="MultiplayerContainer"]
layout_mode = 2
text = "Join"

[node name="NetworkGateway" parent="." instance=ExtResource("5_pirhu")]
layout_mode = 0
offset_left = 283.0
offset_top = 476.0
offset_right = 921.0
offset_bottom = 773.0

[connection signal="pressed" from="NameSelectionContainer/NameConfirmButton" to="." method="_on_name_confirm_button_pressed"]
[connection signal="pressed" from="SingleplayerMultiplayerContainer/HBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="SingleplayerMultiplayerContainer/HBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="SingleplayerMultiplayerContainer/HBoxWebRTC/WebRTC" to="." method="_on_web_rtc_pressed"]
[connection signal="pressed" from="MultiplayerContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerContainer/Join" to="." method="_on_join_pressed"]
[connection signal="resolved_as_necessary" from="NetworkGateway" to="." method="_on_network_gateway_resolved_as_necessary"]
[connection signal="webrtc_multiplayerpeer_set" from="NetworkGateway" to="." method="_on_network_gateway_webrtc_multiplayerpeer_set"]
